Fix header on narrow layout

--- a/themes/minimal-light/assets/scss/components/_navbar.scss
+++ b/themes/minimal-light/assets/scss/components/_navbar.scss
@@ -36,3 +36,17 @@
         background-color: $color-page-background-dark;
     }
 }
+
+
+@media only screen and (max-width: 960px) {
+    .navbar {
+        top: 0px;
+        margin: 0px;
+        width: 100%;
+
+        & ul li {
+            margin-right: 0;
+            flex-grow: 1;
+        }
+    }
+}
